2003-06-26  Richard Hult  <richard@imendio.com>

	* src/drwright.c (popup_about_cb): Remove cool (according to Ross)
	weak ref and add boring gtk_widget_destroyed to get rid of strict
	aliasing warning with gcc 3.3.

2003-06-24  Richard Hult  <richard@imendio.com>

	* drwright.spec.in: Update description and release.

2003-06-24  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version.

	* src/drwright.schemas: Add allow_postpone key.

	* data/glade/drw-preferences.glade:
	* src/drw-break-window.c: Clean up some unlock/postpone confusion.
	
2003-06-17  Richard Hult  <richard@imendio.com>

	* src/drw-break-window.c (unlock_clicked_cb): Disable unlock
	phrase for now.

2003-06-16  Richard Hult  <richard@imendio.com>

	* src/drwright.c (popup_quit_cb): Don't use Yes/No buttons.

2003-06-13  Richard Hult  <richard@imendio.com>

	* *: Update contact information.

2003-05-27  Richard Hult  <rhult@codefactory.se>

	* src/drwright.c (popup_break_cb): Add "take a break" feature.
	(drwright_new, gconf_notify_cb): Make take a break item sensitive
	only when drwright is enabled.

2003-05-24  Richard Hult  <rhult@codefactory.se>

	* src/disclosure-widget.[ch]: Remove.
	
	* src/drwright.c (popup_menu_cb): Popup context menu on
	shift-f10. Fixes part of bug #112474.
	(icon_event_box_expose_event_cb): Draw focus rectangle.

	* data/images: Use colors from the HIG palette and crop the icons
	a bit.

2003-05-22  Richard Hult  <rhult@codefactory.se>

	* Makefile.am:
	* data/glade/drw-preferences.glade:
	* src/Makefile.am:
	* src/drw-break-window.c: (drw_break_window_class_init),
	(drw_break_window_init), (clock_timeout_cb),
	(unlock_entry_activate_cb), (unlock_clicked_cb),
	(get_layout_location), (label_expose_event_cb):
	* src/drw-preferences.c: (gconf_notify_cb), (drw_preferences_new):
	* src/drwright.c: (setup_debug_values), (update_icon),
	(blink_timeout_cb), (start_blinking), (stop_blinking),
	(maybe_change_state), (update_tooltip), (gconf_notify_cb),